Fix: Format code as per VS Code feature

--- a/courses.html
+++ b/courses.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>West Cork Bees | Courses</title>
     <!-- Favicon Links -->
-        <!-- Favicon Links -->
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <!-- Favicon Links -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
 
 </head>
+
 <body>
     <header id="hero">
         <div id="header-dark">
@@ -37,7 +39,8 @@
     <main>
         <section id="courses">
             <h2>Upcoming Beekeeping Courses</h2>
-            <p><span class='bold'>Beginner courses</span> run for six weeks on Saturdays from 12pm to 3pm. No previous experience is required and all equipment is provided.</p>
+            <p><span class='bold'>Beginner courses</span> run for six weeks on Saturdays from 12pm to 3pm. No previous
+                experience is required and all equipment is provided.</p>
             <div>
                 <div class="structure">
                     <p>Our Beginner courses are structured as follows:</p>
@@ -77,7 +80,8 @@
                 </div>
             </div>
             <hr class="hr-75">
-            <p><span class='bold'>Intermediate courses</span> run for eight weeks in the summer months beginning in May and ending in September. You must have previously attended our beginners course or provide
+            <p><span class='bold'>Intermediate courses</span> run for eight weeks in the summer months beginning in May
+                and ending in September. You must have previously attended our beginners course or provide
                 evidence of your beekeeping experience with your own hives. All equipment is provided.
             </p>
             <div>
@@ -118,36 +122,49 @@
         <hr>
         <section id="why">
             <h2>Why Become a Beekeeper?</h2>
-            <p>Becoming a beekeeper can be a rewarding and fascinating endeavor. Here are some compelling reasons to consider taking up beekeeping:</p>
+            <p>Becoming a beekeeper can be a rewarding and fascinating endeavor. Here are some compelling reasons to
+                consider taking up beekeeping:</p>
             <div id="parent-why">
                 <div class="why-div">
                     <h3>1. Connection with Nature</h3>
-                    <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the needs of your bees, an understanding of seasonal changes, 
-                        and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding experience.</p>
-                    <img class="wide-crop main-images" src="assets/images/smiling-beekeeper-crop.png" alt="A smiling beekeeper standing in a sunny field.">
+                    <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the
+                        needs of your bees, an understanding of seasonal changes,
+                        and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding
+                        experience.</p>
+                    <img class="wide-crop main-images" src="assets/images/smiling-beekeeper-crop.png"
+                        alt="A smiling beekeeper standing in a sunny field.">
                 </div>
                 <div class="why-div">
                     <h3>2. Honey Production</h3>
-                    <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own honey is not only a delicious reward for your efforts but can
+                    <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own
+                        honey is not only a delicious reward for your efforts but can
                         also be a source of potential income or a unique gift for friends and family.</p>
-                    <img class="wide-crop main-images" src="assets/images/honeycomb.jpg" alt="A closeup of honeycomb full of honey">
+                    <img class="wide-crop main-images" src="assets/images/honeycomb.jpg"
+                        alt="A closeup of honeycomb full of honey">
                 </div>
                 <div class="why-div">
                     <h3>3. Positive Environmental Impact</h3>
-                    <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and flowers. By becoming a beekeeper, you actively participate in 
-                        supporting local ecosystems. Healthy bee populations are essential for biodiversity and food production.</p>
-                    <img class="wide-crop main-images" src="assets/images/bees-lavender.jpg" alt="Two bees gathering pollen from purple flowers">
+                    <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and
+                        flowers. By becoming a beekeeper, you actively participate in
+                        supporting local ecosystems. Healthy bee populations are essential for biodiversity and food
+                        production.</p>
+                    <img class="wide-crop main-images" src="assets/images/bees-lavender.jpg"
+                        alt="Two bees gathering pollen from purple flowers">
                 </div>
                 <div class="why-div">
                     <h3>4. Relaxation and Stress Relief</h3>
-                    <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the hive, the focused attention 
+                    <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the
+                        hive, the focused attention
                         required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
-                    <img class="wide-crop main-images" src="assets/images/single-beekeeper.jpg" alt="A beekeeper wearing protective clothing carefully examing their beehive">
+                    <img class="wide-crop main-images" src="assets/images/single-beekeeper.jpg"
+                        alt="A beekeeper wearing protective clothing carefully examing their beehive">
                 </div>
             </div>
             <h3>But...</h3>
-                <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to educate yourself about bee behavior, hive management, and 
-                    potential challenges; however, for those who are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
+            <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to
+                educate yourself about bee behavior, hive management, and
+                potential challenges; however, for those who are passionate about nature, sustainability, and learning,
+                beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
         </section>
         <div id="sign-up-button">
             <a href="form.html">Sign Up for a Beekeeping Course!</a>
@@ -158,24 +175,28 @@
     <footer>
         <ul>
             <li>
-                <a href="tel:021-12345678" aria-label="Call us (opens your phone app or program and autofills our phone number)">
+                <a href="tel:021-12345678"
+                    aria-label="Call us (opens your phone app or program and autofills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
             <li>
-                <a href="mailto:info@corkbeekeeping.ie" aria-label="Email us (opens your email app or program with our email in the To field)">
+                <a href="mailto:info@corkbeekeeping.ie"
+                    aria-label="Email us (opens your email app or program with our email in the To field)">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu" aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
+                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu"
+                    aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
                     <i class="fa-solid fa-map-location-dot"></i>
                 </a>
-            </li>       
+            </li>
         </ul>
     </footer>
 
     <!-- Font Awesome kit-->
     <script src="https://kit.fontawesome.com/f9b81dc597.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
