--- a/form.html
+++ b/form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>West Cork Bees | Course Signup </title>
     <!-- Favicon Links -->
-        <!-- Favicon Links -->
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <!-- Favicon Links -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
 
 </head>
+
 <body>
     <header id="hero">
         <div id="header-dark">
@@ -37,8 +39,9 @@
     <main>
         <section id="registration">
             <h2>Register for a Beekeeping Course</h2>
-            <p>Enter your details below to register interest for an upcoming beekeeping course. You will receive an acknowledgement email when your registration is processed. 
-            Payment will be taken over the phone on the same or next working day.</p>
+            <p>Enter your details below to register interest for an upcoming beekeeping course. You will receive an
+                acknowledgement email when your registration is processed.
+                Payment will be taken over the phone on the same or next working day.</p>
             <form action="https://formdump.codeinstitute.net/" method="POST">
                 <fieldset class="details-boxes">
                     <legend>Your Details</legend>
@@ -69,10 +72,10 @@
                         <input type='radio' name="course-level" id="beginner240032" value="beginner240302">
                         <label for="beginner240032">Saturday 2nd March 2024</label>
                     </div>
-                </fieldset>   
+                </fieldset>
                 <fieldset class="details-boxes courses-radio">
                     <legend>Intermediate Courses</legend>
-                    <div>    
+                    <div>
                         <input type='radio' name="course-level" id="intermediate240713" value="intermediate240713">
                         <label for="intermediate240713">Saturday 13th July 2024</label>
                     </div>
@@ -88,24 +91,28 @@
     <footer>
         <ul>
             <li>
-                <a href="tel:021-12345678" aria-label="Call us (opens your phone app or program and autofills our phone number)">
+                <a href="tel:021-12345678"
+                    aria-label="Call us (opens your phone app or program and autofills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
             <li>
-                <a href="mailto:info@corkbeekeeping.ie" aria-label="Email us (opens your email app or program with our email in the To field)">
+                <a href="mailto:info@corkbeekeeping.ie"
+                    aria-label="Email us (opens your email app or program with our email in the To field)">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu" aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
+                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu"
+                    aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
                     <i class="fa-solid fa-map-location-dot"></i>
                 </a>
-            </li>       
+            </li>
         </ul>
     </footer>
 
     <!-- Font Awesome kit-->
     <script src="https://kit.fontawesome.com/f9b81dc597.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
