--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +14,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
 
 </head>
+
 <body>
     <header id="hero">
         <!-- Div to allow black gradient over background image -->
-        <div id="header-dark"> 
+        <div id="header-dark">
             <nav>
                 <ul id="navbar">
                     <li>
@@ -39,47 +41,63 @@
         <section id="about-us">
             <h2>Welcome to West Cork Beekeeping!</h2>
             <div>
-                <p>Nestled in the rolling hills of West Cork, our group of dedicated beekeepers have worked together over the last two decades to establish a thriving beekeeping community. 
-                    Since 2002, we have been cultivating and caring for a large number of hives and working towards protecting the native Irish honey bee in our area. Beyond the honey jars, we're
-                    committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve into the intricate world of bees, appreciating the harmony they bring to our 
+                <p>Nestled in the rolling hills of West Cork, our group of dedicated beekeepers have worked together
+                    over the last two decades to establish a thriving beekeeping community.
+                    Since 2002, we have been cultivating and caring for a large number of hives and working towards
+                    protecting the native Irish honey bee in our area. Beyond the honey jars, we're
+                    committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve
+                    into the intricate world of bees, appreciating the harmony they bring to our
                     environment and fostering a sustainable connection with nature.</p>
-                    <img class="main-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland">
+                <img class="main-images" src="assets/images/three-beekeepers.jpg"
+                    alt="Three smiling beekeepers standing amongst heehives in sunny woodland">
             </div>
         </section>
         <hr>
         <section id="about-bees">
             <h2>The Irish Honey Bee</h2>
-                <div>
-                    <!-- <div id="one"> -->
-                        <p>While often referred to as such, the Irish honey bee is not unique to Ireland. In fact, the same species of Apis Mellifera is found all throughout Europe. These small creatures play 
-                        a vital role in our ecosystem as pollinators for many species of flowers and plants, aiding in their reproduction. Many foods we rely on for nutrition and agricultural 
-                        productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
-                   <!--  </div>
+            <div>
+                <!-- <div id="one"> -->
+                <p>While often referred to as such, the Irish honey bee is not unique to Ireland. In fact, the same
+                    species of Apis Mellifera is found all throughout Europe. These small creatures play
+                    a vital role in our ecosystem as pollinators for many species of flowers and plants, aiding in their
+                    reproduction. Many foods we rely on for nutrition and agricultural
+                    productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
+                <!--  </div>
                     <div id="two"> -->
-                        <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar.jpg" alt="A closeup of a bee on a pink flower with pollen on its knees.">
-                    <!-- </div>
+                <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar.jpg"
+                    alt="A closeup of a bee on a pink flower with pollen on its knees.">
+                <!-- </div>
                     <div id="three"> -->
-                        <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide exposure, diseases, and climate change. Efforts to protect and conserve honey bee 
-                        populations are essential for maintaining the health of ecosystems and ensuring global food security. That is where we come in. As beekeepers, we take enjoyment in our work for the 
-                        pleasure it brings us; however, in a time where bees find themselves at a real risk of extinction, we beekeepers have an important role to play in preserving and nurturing 
-                        these beautiful and noble insects.</p>
-                   <!--  </div> -->
-                </div>
+                <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide
+                    exposure, diseases, and climate change. Efforts to protect and conserve honey bee
+                    populations are essential for maintaining the health of ecosystems and ensuring global food
+                    security. That is where we come in. As beekeepers, we take enjoyment in our work for the
+                    pleasure it brings us; however, in a time where bees find themselves at a real risk of extinction,
+                    we beekeepers have an important role to play in preserving and nurturing
+                    these beautiful and noble insects.</p>
+                <!--  </div> -->
+            </div>
         </section>
         <hr>
         <section id="short-descriptions">
             <div class="invite">
                 <h3>Beekeeping Courses</h3>
-                <a href="courses.html"><img src="assets/images/beekpeer-hive-rack.jpg" alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images"></a>
-                <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by enrolling in our immersive course. 
-                    <span class='mobile'>Tap the image above to learn more.</span></p>                
+                <a href="courses.html"><img src="assets/images/beekpeer-hive-rack.jpg"
+                        alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images"></a>
+                <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by
+                    enrolling in our immersive course.
+                    <span class='mobile'>Tap the image above to learn more.</span>
+                </p>
             </div>
             <hr class="hide-hr hr-75">
             <div class="invite">
                 <h3>Local Honey</h3>
-                <a href="shop.html"><img src="assets/images/honey-jars.jpg" alt="Shelves of golden honey in labelled jars." class="invitation-images"></a>
-                <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of liquid gold and experience the pure, rich flavors captured 
-                    by our passionate beekeeping team. <span class='mobile'>Tap the image above to learn more.</span></p>
+                <a href="shop.html"><img src="assets/images/honey-jars.jpg"
+                        alt="Shelves of golden honey in labelled jars." class="invitation-images"></a>
+                <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of
+                    liquid gold and experience the pure, rich flavors captured
+                    by our passionate beekeeping team. <span class='mobile'>Tap the image above to learn more.</span>
+                </p>
             </div>
         </section>
         <div id="sign-up-button">
@@ -91,24 +109,28 @@
     <footer>
         <ul>
             <li>
-                <a href="tel:021-12345678" aria-label="Call us (opens your phone app or program and autofills our phone number)">
+                <a href="tel:021-12345678"
+                    aria-label="Call us (opens your phone app or program and autofills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
             <li>
-                <a href="mailto:info@corkbeekeeping.ie" aria-label="Email us (opens your email app or program with our email in the To field)">
+                <a href="mailto:info@corkbeekeeping.ie"
+                    aria-label="Email us (opens your email app or program with our email in the To field)">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu" aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
+                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu"
+                    aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
                     <i class="fa-solid fa-map-location-dot"></i>
                 </a>
-            </li>       
+            </li>
         </ul>
     </footer>
 
     <!-- Font Awesome kit-->
     <script src="https://kit.fontawesome.com/f9b81dc597.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
