--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>West Cork Bees | Shop</title>
     <!-- Favicon Links -->
-        <!-- Favicon Links -->
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <!-- Favicon Links -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
 
 </head>
+
 <body>
     <header id="hero">
         <div id="header-dark">
@@ -36,12 +38,14 @@
     <!-- Main Content-->
     <main>
         <section id="shop">
-                <h2>Shop</h2>
-                <p>To keep our costs low, all payments are taken over the phone. Please email or call us to place your order for collection or delivery. 
-                Use your beginner course certificate number for a once-off 10% discount on purchases from our shop. Please note we only offer delivery 
+            <h2>Shop</h2>
+            <p>To keep our costs low, all payments are taken over the phone. Please email or call us to place your order
+                for collection or delivery.
+                Use your beginner course certificate number for a once-off 10% discount on purchases from our shop.
+                Please note we only offer delivery
                 to the Republic of Ireland and to Northern Ireland.</p>
-                <p>Contact number: <a href="tel:021-12345678">021 12345678</a></p>
-                <p>Email: <a href="mailto:info@corkbeekeeping.ie">info@corkbeekeeping.ie</a></p>
+            <p>Contact number: <a href="tel:021-12345678">021 12345678</a></p>
+            <p>Email: <a href="mailto:info@corkbeekeeping.ie">info@corkbeekeeping.ie</a></p>
             <hr>
             <div id="products-div">
                 <div class="products">
@@ -51,7 +55,8 @@
                         <li>€7 each</li>
                         <li>3 jars for €20</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/two-honey-jars-sq.png" alt="Two jars of clear golden honey sitting on a wooden table.">
+                    <img class="shop-img" src="assets/images/two-honey-jars-sq.png"
+                        alt="Two jars of clear golden honey sitting on a wooden table.">
                 </div>
                 <div class="products">
                     <h3>Beekeeper Suit</h3>
@@ -60,7 +65,8 @@
                         <li>Sizes: Small - Medium - Large</li>
                         <li>€105</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/beekeeper-suit-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                    <img class="shop-img" src="assets/images/beekeeper-suit-sq.png"
+                        alt="White beekeeping suit with protective gloves and veil.">
                 </div>
                 <div class="products">
                     <h3>Wooden Beehive - Starter Kit</h3>
@@ -69,7 +75,8 @@
                         <li>Size: 600L x 450W x 1500H mm</li>
                         <li>€325</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/colourful-beehives-sq.png" alt="A blue wooden beehive in a field.">
+                    <img class="shop-img" src="assets/images/colourful-beehives-sq.png"
+                        alt="A blue wooden beehive in a field.">
                 </div>
                 <div class="products">
                     <h3>Smoker</h3>
@@ -78,7 +85,8 @@
                         <li>Size: 170mm height</li>
                         <li>€25</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/smoker-sq.png" alt="A metal bee smoker with brown bellows resting on top of a beehive.">
+                    <img class="shop-img" src="assets/images/smoker-sq.png"
+                        alt="A metal bee smoker with brown bellows resting on top of a beehive.">
                 </div>
                 <div class="products">
                     <h3>Glass Jars 400ml - box of 10</h3>
@@ -90,36 +98,40 @@
                     <img class="shop-img" src="assets/images/empty-jar-sq.png" alt="A clean empty glass jar.">
                 </div>
             </div>
-            
-        
+
+
         </section>
         <div id="sign-up-button">
             <a href="form.html">Sign Up for a Beekeeping Course!</a>
         </div>
     </main>
 
-     <!-- Footer Content -->
-     <footer>
+    <!-- Footer Content -->
+    <footer>
         <ul>
             <li>
-                <a href="tel:021-12345678" aria-label="Call us (opens your phone app or program and autofills our phone number)">
+                <a href="tel:021-12345678"
+                    aria-label="Call us (opens your phone app or program and autofills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
             <li>
-                <a href="mailto:info@corkbeekeeping.ie" aria-label="Email us (opens your email app or program with our email in the To field)">
+                <a href="mailto:info@corkbeekeeping.ie"
+                    aria-label="Email us (opens your email app or program with our email in the To field)">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu" aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
+                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu"
+                    aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
                     <i class="fa-solid fa-map-location-dot"></i>
                 </a>
-            </li>       
+            </li>
         </ul>
     </footer>
 
     <!-- Font Awesome kit-->
     <script src="https://kit.fontawesome.com/f9b81dc597.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
