Fix: Update page titles for consistency

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Title -->
-    <title>West Cork Bees | Home</title>
+    <title>West Cork Beekeeping | Home</title>
     <!-- Favicon Links -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -56,18 +56,13 @@
         <section id="about-bees">
             <h2>The Irish Honey Bee</h2>
             <div>
-                <!-- <div id="one"> -->
                 <p>While often referred to as such, the Irish honey bee is not unique to Ireland. In fact, the same
                     species of Apis Mellifera is found all throughout Europe. These small creatures play
                     a vital role in our ecosystem as pollinators for many species of flowers and plants, aiding in their
                     reproduction. Many foods we rely on for nutrition and agricultural
                     productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
-                <!--  </div>
-                    <div id="two"> -->
                 <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar.jpg"
                     alt="A closeup of a bee on a pink flower with pollen on its knees.">
-                <!-- </div>
-                    <div id="three"> -->
                 <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide
                     exposure, diseases, and climate change. Efforts to protect and conserve honey bee
                     populations are essential for maintaining the health of ecosystems and ensuring global food
@@ -75,7 +70,6 @@
                     pleasure it brings us; however, in a time where bees find themselves at a real risk of extinction,
                     we beekeepers have an important role to play in preserving and nurturing
                     these beautiful and noble insects.</p>
-                <!--  </div> -->
             </div>
         </section>
         <hr>
