--- a/shop.html
+++ b/shop.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>West Cork Bees | Shop</title>
-    <!-- Favicon Links -->
+    <title>West Cork Beekeeping | Shop</title>
     <!-- Favicon Links -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
