--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                 <a href="courses.html"><img src="assets/images/beekpeer-hive-rack.jpg"
                         alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images"></a>
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by
-                    enrolling in our immersive course.
-                    <span class='mobile'>Tap the image above to learn more.</span>
+                    enrolling in our immersive course. <span class='mobile'>Tap</span><span class='desktop'>Click</span> the image above to learn more.
                 </p>
             </div>
             <hr class="hide-hr hr-75">
@@ -90,7 +89,8 @@
                         alt="Shelves of golden honey in labelled jars." class="invitation-images"></a>
                 <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of
                     liquid gold and experience the pure, rich flavors captured
-                    by our passionate beekeeping team. <span class='mobile'>Tap the image above to learn more.</span>
+                    by our passionate beekeeping team. <span class='mobile'>Tap</span><span class='desktop'>Click</span>
+                    the image above to learn more.
                 </p>
             </div>
         </section>
