Fix: Assign correct class to images in courses.html

--- a/courses.html
+++ b/courses.html
@@ -130,7 +130,7 @@
                         needs of your bees, an understanding of seasonal changes,
                         and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding
                         experience.</p>
-                    <img class="wide-crop main-images" src="assets/images/smiling-beekeeper-crop.png"
+                    <img class="tablet-wide-crop main-images" src="assets/images/smiling-beekeeper-crop.png"
                         alt="A smiling beekeeper standing in a sunny field.">
                 </div>
                 <div class="why-div">
@@ -138,7 +138,7 @@
                     <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own
                         honey is not only a delicious reward for your efforts but can
                         also be a source of potential income or a unique gift for friends and family.</p>
-                    <img class="wide-crop main-images" src="assets/images/honeycomb.jpg"
+                    <img class="tablet-wide-crop main-images" src="assets/images/honeycomb.jpg"
                         alt="A closeup of honeycomb full of honey">
                 </div>
                 <div class="why-div">
@@ -147,7 +147,7 @@
                         flowers. By becoming a beekeeper, you actively participate in
                         supporting local ecosystems. Healthy bee populations are essential for biodiversity and food
                         production.</p>
-                    <img class="wide-crop main-images" src="assets/images/bees-lavender.jpg"
+                    <img class="tablet-wide-crop main-images" src="assets/images/bees-lavender.jpg"
                         alt="Two bees gathering pollen from purple flowers">
                 </div>
                 <div class="why-div">
@@ -155,7 +155,7 @@
                     <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the
                         hive, the focused attention
                         required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
-                    <img class="wide-crop main-images" src="assets/images/single-beekeeper.jpg"
+                    <img class="tablet-wide-crop main-images" src="assets/images/single-beekeeper.jpg"
                         alt="A beekeeper wearing protective clothing carefully examing their beehive">
                 </div>
             </div>
