Feat: Add aria labels to image links in third page section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section id="short-descriptions">
             <div class="invite">
                 <h3>Beekeeping Courses</h3>
-                <a href="courses.html"><img src="assets/images/beekpeer-hive-rack.jpg"
+                <a href="courses.html" aria-label="Go to our Beekeeping Courses page (opens in the same tab)"><img src="assets/images/beekpeer-hive-rack.jpg"
                         alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images"></a>
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by
                     enrolling in our immersive course. <span class='mobile'>Tap</span><span class='desktop'>Click</span> the image above to learn more.
@@ -85,7 +85,7 @@
             <hr class="hide-hr hr-75">
             <div class="invite">
                 <h3>Local Honey</h3>
-                <a href="shop.html"><img src="assets/images/honey-jars.jpg"
+                <a href="shop.html" aria-label="Go to our Shop page (opens in the same tab)"><img src="assets/images/honey-jars.jpg"
                         alt="Shelves of golden honey in labelled jars." class="invitation-images"></a>
                 <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of
                     liquid gold and experience the pure, rich flavors captured
