Fix: Add aria labels to phone number and email links at top of page

--- a/shop.html
+++ b/shop.html
@@ -43,8 +43,12 @@
                 Use your beginner course certificate number for a once-off 10% discount on purchases from our shop.
                 Please note we only offer delivery
                 to the Republic of Ireland and to Northern Ireland.</p>
-            <p>Contact number: <a href="tel:021-12345678">021 12345678</a></p>
-            <p>Email: <a href="mailto:info@corkbeekeeping.ie">info@corkbeekeeping.ie</a></p>
+            <p>Contact number: <a href="tel:021-12345678"
+                    aria-label="Call us (opens your phone app or program and autofills our phone number)">021
+                    12345678</a></p>
+            <p>Email: <a href="mailto:info@corkbeekeeping.ie"
+                    aria-label="Email us (opens your email app or program with our email in the To field)">info@corkbeekeeping.ie</a>
+            </p>
             <hr>
             <div id="products-div">
                 <div class="products">
