Fix: Add specified pattern to phone number input field.

--- a/form.html
+++ b/form.html
@@ -54,7 +54,7 @@
                     </div>
                     <div>
                         <label for="phone">Phone Number: </label>
-                        <input type="tel" name="phone" id="phone" autocomplete='on' placeholder="*Required" required>
+                        <input type="tel" name="phone" id="phone" autocomplete='on' placeholder="00000000" pattern="[0-9]{8}" required>
                     </div>
                     <div>
                         <label for="age">Date of Birth: </label>
